revert scroll changesRevert "Fixed horizontal scroll on pages"
This reverts commit 12d01cb3e978d56ae5aad79de4ce6a9737e4a64e.

--- a/wp-content/themes/understrap/css/theme.css
+++ b/wp-content/themes/understrap/css/theme.css
@@ -8642,9 +8642,6 @@ p {
   font-size: 26px;
   font-family: "Roboto", sans-serif; }
 
-.wrapper {
-  overflow: hidden; }
-
 .article-button {
   background-color: #bc2c2d;
   color: #fff;
