--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -64,10 +64,6 @@ p
     }
 }
 
-.wrapper {
-    overflow: hidden;
-}
-
 .article-button
 {
     background-color: $primary-color;
